# playground-mysql

./: .env.sample  .gitignore  .tool-versions  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  reset-docker.sh  reset-py.sh
api/: Dockerfile  README.md  main.py  requirements.txt
api/src/: auth.py  brand.py  category.py  database.py  logger_config.py  main.py  order_detail.py  product.py  test_main.py  user.py
api/src/api/: auth.py  brand.py  category.py  order.py  order_detail.py  product.py  user.py
db/: README.md  requirements.txt
db/ddl/: brands.sql  categories.sql  order_details.sql  orders.sql  products.sql
db/dml/: brands.sql  categories.sql  order_details.sql  products.sql
db/index/: orders_index.sql  products_index.sql  users_index.sql
db/old/: dml.sql  index.sql  init-database.sh
db/test/: clean_test_data.py  insert_test_data.py  test_database.py
ddl/: users.sql
dml/: orders.sql  users.sql
docs/: references.md
docs/api/: api-endpoints.md
docs/db/: db-ddl-Index.md  db-tables.md
docs/interface/: tables.md
old/: query_design.sql
test/: clean_test_data.py  insert_test_data.py  test_database.py
